--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             <p>
                                 <strong>Bootstrap 4 Resume Page</strong>
                                 <br>
-                                Resume webpage made with Bootstrap 4, exploring properties such as flexbox, animations, and responsive designs.
+                                Resume webpage made with Bootstrap 4 and JQuery, exploring properties such as flexbox, animations, and responsive designs.
                             </p>
                         </div>
                     </div>
