--- a/index.html
+++ b/index.html
@@ -163,6 +163,49 @@
             <!--Projects-->
             <div class="row d-flex justify-content-lg-center">
 
+                 <!--Bootstrap 4 Webpage-->
+                 <a href="https://github.com/RockyLogic/Personal-Website-Bootstrap-4" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/bootstrap4.png" alt="Bootstrap4 Webpage" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Bootstrap 4 Resume Page</strong>
+                                <br>
+                                Resume webpage made with Bootstrap 4 and JQuery, exploring properties such as flexbox, animations, and responsive designs.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+                
+                <!--BootStrap 3 Webpage-->
+                <a href="https://github.com/RockyLogic/Personal-Website" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/bootstrap3.png" alt="Bootstrap3 Webpage" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Bootstrap 3 Introduction Page</strong>
+                                <br>
+                                A introduction webpage made with HTML5, CSS3, Bootstrap 3, used Bootstrap's grid and navigation bar features.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+                
+                <!--Sneaker Gallery-->
+                <a href="https://github.com/RockyLogic/Personal-Sneaker-Gallery" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/html&css.jpg" alt="Sneaker Gallery" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Sneaker Gallary</strong>
+                                <br>
+                                First webpage project using HTML5 and CSS3! Created a webpage to display my collection
+                                of sneakers!
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
                 <!--MultiThreaded Discord Joiner-->
                 <a href="https://github.com/RockyLogic/Multithreaded-Discord-Joiner" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
                     <div class="project">
@@ -193,7 +236,7 @@
                     </div>
                 </a>
 
-                <!--Discord Link Opener-->
+                <!--Discord Link ScreenShot Bot-->
                 <a href="https://github.com/RockyLogic/Discord-Screenshot-Bot" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
                     <div class="project">
                         <img src="src/images/discord.jpg" alt="Discord ScreenShot" class="projectImage">
@@ -203,21 +246,6 @@
                                 <br>
                                 A Discord bot which, sends a screenshot of any web page through the use of selenium
                                 (Basis for other projects).
-                            </p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Sneaker Gallery-->
-                <a href="https://github.com/RockyLogic/Personal-Sneaker-Gallery" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
-                    <div class="project">
-                        <img src="src/images/html&css.jpg" alt="Sneaker Gallery" class="projectImage">
-                        <div class="projectDescription">
-                            <p>
-                                <strong>Sneaker Gallary</strong>
-                                <br>
-                                First webpage project using HTML5 and CSS3! Created a webpage to display my collection
-                                of sneakers!
                             </p>
                         </div>
                     </div>
@@ -233,34 +261,6 @@
                                 <br>
                                 Made using PyTesseract, DiscordPy, and Pillow (PIL). Converts words within images into a
                                 formatted string of text in an embed.
-                            </p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--BootStrap 3 Webpage-->
-                <a href="https://github.com/RockyLogic/Personal-Website" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
-                    <div class="project">
-                        <img src="src/images/bootstrap3.png" alt="Bootstrap3 Webpage" class="projectImage">
-                        <div class="projectDescription">
-                            <p>
-                                <strong>Bootstrap 3 Introduction Page</strong>
-                                <br>
-                                A introduction webpage made with HTML5, CSS3, Bootstrap 3, used Bootstrap's grid and navigation bar features.
-                            </p>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Bootstrap 4 Webpage-->
-                <a href="https://github.com/RockyLogic/Personal-Website-Bootstrap-4" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
-                    <div class="project">
-                        <img src="src/images/bootstrap4.png" alt="Bootstrap4 Webpage" class="projectImage">
-                        <div class="projectDescription">
-                            <p>
-                                <strong>Bootstrap 4 Resume Page</strong>
-                                <br>
-                                Resume webpage made with Bootstrap 4 and JQuery, exploring properties such as flexbox, animations, and responsive designs.
                             </p>
                         </div>
                     </div>
@@ -431,6 +431,7 @@
             });
         });
     </script>
+
 </body>
 
 </html>
