--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body>
+<body> 
     <!--Scroll Animation-->
     <div class="arrow arrow-1"></div>
     <div class="arrow arrow-2"></div>
@@ -266,6 +266,7 @@
                     </div>
                 </a>
 
+                
                 <!--Coming Soon-->
                 <a href="https://github.com/RockyLogic" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
                     <div class="project">
@@ -308,9 +309,9 @@
                     <div class="row d-flex justify-content-center">
                         <div class="col-8 col-md-10 d-lg-flex flex-column"style="text-align: start; width:600px margin-top:10%;">
                             <h1><strong>How May I Be Of Assistance?</strong></h1>
-                            <hr align="left" style="width: 100%; border: 3px solid; color: black;">
+                            <hr align="left" style="width: 100%; border: 3px solid; color: rgb(134, 134, 134);">
                             <br>
-                            <h4>If there is anything you need I would be happy to help! I will get back to you as soon as possible.</h4>
+                            <h4>I would be happy to help! I will get back to you as soon as possible.</h4>
                             <br>
                             <div>
                                 <i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i> 
