--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!--Signature at the top Left-->
         <a id="mainNavbarBrand" href="#" class="navbar-brand">
             <img src="src/images/icon.png" width="30" height="30" class="align-middle" alt="pageIcon">
-            <span id="mainNavbarBrandName">Rocky Kuang</span>
+            <span id="mainNavbarBrandName" style="padding-left: 7px;">Rocky Kuang</span>
         </a>
 
         <!--Collapse Nav When Dimensions Shrink-->
