--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 var $github = $("#githubLink");
                 var $name = $("#mainNavbarBrandName");
 
-                //nav transformation function based on scroll position
+                //function based on scroll position -- nav transformation
                 function transformNav(){
                     if($(window).scrollTop() < $home.height()-$nav.height()){
                         $nav.addClass("unscrolled");
