--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
                 <div class="col-12 col-md-6 d-flex justify-content-center align-items-center py-3 py-md-0">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-8 col-md-10 d-lg-flex flex-column"style="text-align: start; width:600px margin-top:10%;">
+                        <div class="col-8 col-md-10 d-lg-flex flex-column"style="text-align: start; width:600px margin-top:10%; text-align:middle;">
                             <h1><strong>How May I Be Of Assistance?</strong></h1>
                             <hr align="left" style="width: 100%; border: 3px solid; color: rgb(180, 180, 180);">
                             <br>
