attempting to add preloader

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="src/css/portfolio.css" type="text/css">
     <link rel="stylesheet" href="src/css/contact.css" type="text/css">
     <link rel="stylesheet" href="src/css/footer.css" type="text/css">
-
+    <link rel="stylesheet" href="src/css/preloader.css" type="text/css">
 
     <!--Web Page Title-->
     <title>Rocky Kuang</title>
@@ -35,6 +35,7 @@
 </head>
 
 <body> 
+
     <!--Scroll Animation-->
     <div class="arrow arrow-1"></div>
     <div class="arrow arrow-2"></div>
@@ -329,15 +330,27 @@
     <footer id="footer" class="footer">
         <span>© Rocky Kuang 2020</span>
     </footer>
-    
+
+    <!--Preloader-->
+    <!-- <div class="preload-Wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div> -->
+
+
     <!--Java Script-->
     <!--1.jQuery, 2.Popper.js, 3.BootStrap JS-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
     <script>
+
+        
+
         $(function(){
+                //Preloader Fade Out
+                // $(window).on("load",function(){
+                //     $(".preload-Wrapper").fadeOut("slow");
+                // });
 
                 //Defining Variables
                 var $nav = $("#mainNavbar");
