--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                             <br>
                             GPA (4.33 System): 4.08
                             <br>
-                            <br>
+                            <br>    
                             Located: Toronto, ON, Canada 
                         </p>
                 
                         <!--About Footer Links-->
-                        <div>
+                        <div class="d-none d-sm-inline-block">
                             <div>My Socials: </div>
                             <a class="aboutLinks" href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank"><i class="fa fa-linkedin-square fa-lg " aria-hidden="true "></i></a>
                             <a class="aboutLinks" href="https://github.com/RockyLogic" target="_blank"><i class="fa fa-github-square fa-lg " aria-hidden="true "></i></a>
