--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
         </div>
     </section>
 
+
+    <!--Add Education/Involvement-->
+    <!-- Ryerson University-->
+    <!--First Robotics-->
+    <!--Udemy Classes Taken-->
+    
     <!--Portfolio-->
     <section id="portfolio" class="portfolio">
         <div class="container">
