minor format change

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 <!--Left Side of About-->
                 <div class="col-lg-6 aboutContent">
-                    <div class="aboutInfo">
+                    <div>
                         <h1 class="aboutTitle"><strong>About Me!</strong></h1>
                         <hr class="aboutHR">
                         <p>Greetings! I am a first-year university student at Ryerson University pursuing a Bachelor of
