changed contact links

--- a/index.html
+++ b/index.html
@@ -305,25 +305,30 @@
                             <br>
                             <h4>I would be happy to help! I will get back to you as soon as possible.</h4>
                             <br>
+
+                            <!--Email-->
                             <div>
                                 <i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i> 
                                 <a href="mailto:Rockykuang@hotmail.com" class="contactLinks">
                                     Email<span class="d-none d-lg-inline contactLinkDetail"><strong>: RockyKuang@hotmail.com</strong></span>
                                 </a>
                             </div>
+                            
+                            <!--Github-->
+                            <div>
+                                <i class="fa fa-github-square fa-lg" aria-hidden="true "></i> 
+                                <a href="https://github.com/RockyLogic " target="_blank" class="contactLinks">
+                                    GitHub<span class="d-none d-lg-inline contactLinkDetail"><strong> - RKuangDev</strong></span>
+                                </a>
+                            </div>
+
+                            <!--Linkedin-->
                             <div>
                                 <i class="fa fa-linkedin-square fa-lg" aria-hidden="true "></i> 
                                 <a href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank" class="contactLinks">
                                     Linkedin<span class="d-none d-lg-inline contactLinkDetail"><strong> - Rocky Kuang </strong></span>
                                 </a>
                             </div>  
-                            <div>
-                                <i class="fa fa-github-square fa-lg" aria-hidden="true "></i> 
-                                <a href="https://github.com/RockyLogic " target="_blank" class="contactLinks">
-                                    
-                                    GitHub<span class="d-none d-lg-inline contactLinkDetail"><strong> - RKuangDev</strong></span>
-                                </a>
-                            </div>
                         </div>
                     </div>
                 </div>
