--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                             <h1><strong>How May I Be Of Assistance?</strong></h1>
                             <hr align="left" style="width: 100%; border: 3px solid; color: rgb(180, 180, 180);">
                             <br>
-                            <h4>I would be happy to help! I will get back to you as soon as possible.</h4>
+                            <h5>Looking for internships for summer of 2020. Let me know if you have any questions, I would be happy to answer them.</h5>
                             <br>
 
                             <!--Email-->
