Added Twitter Contact

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                             <div>My Socials: </div>
                             <a class="aboutLinks" href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank"><i class="fa fa-linkedin-square fa-lg " aria-hidden="true "></i></a>
                             <a class="aboutLinks" href="https://github.com/RockyLogic" target="_blank"><i class="fa fa-github-square fa-lg " aria-hidden="true "></i></a>
+                            <a class="aboutLinks" href="https://twitter.com/LogicRocky" target="_blank"><i class="fa fa-twitter-square fa-lg " aria-hidden="true "></i></a>
                         </div>
                     </div>
                 </div>
