--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     <a class="nav-link"href="#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="https://drive.google.com/uc?export=download&id=1dBdCygiXhfRUmoRiHxtN4tVni_FPH608">Resume</a>
                 </li>
             </ul>
         </div>
@@ -329,7 +329,15 @@
                                 <a href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank" class="contactLinks">
                                     Linkedin<span class="d-none d-lg-inline contactLinkDetail"><strong> - Rocky Kuang </strong></span>
                                 </a>
-                            </div>  
+                            </div>
+
+                            <!--Resume-->
+                            <div>
+                                <i class="fa fa-id-card fa-lg" aria-hidden="true "></i>
+                                <a href="https://drive.google.com/uc?export=download&id=1dBdCygiXhfRUmoRiHxtN4tVni_FPH608" class="contactLinks">
+                                    Resume
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
