Minor Resume Update

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                             <div>
                                 <i class="fa fa-id-card fa-lg" aria-hidden="true "></i>
                                 <a href="https://drive.google.com/uc?export=download&id=1dBdCygiXhfRUmoRiHxtN4tVni_FPH608" class="contactLinks">
-                                    Resume
+                                    Resume (Download)
                                 </a>
                             </div>
                         </div>
