Profile Image & Resume Updated

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="profile">
-                        <img class="profileImage" src="https://media-exp1.licdn.com/dms/image/C5603AQG3LDuajVlL7Q/profile-displayphoto-shrink_200_200/0?e=1588204800&v=beta&t=elSwWdPlL6mf6rkUAhISg5V4fdQfN_TzD3MVdt_Wzdo ">
+                        <img class="profileImage" src="src/images/profile.JPG">
                         <div>
                             <h1><strong>Rocky Kuang</strong></h1>
                             <h3>Computer Science Student</h3>
@@ -335,7 +335,7 @@
                             <div>
                                 <i class="fa fa-id-card fa-lg" aria-hidden="true "></i>
                                 <a href="https://drive.google.com/uc?export=download&id=1dBdCygiXhfRUmoRiHxtN4tVni_FPH608" class="contactLinks">
-                                    Resume (Download)
+                                    Resume<span class="d-none d-lg-inline contactLinkDetail"><strong>(Download)</strong></span>
                                 </a>
                             </div>
                         </div>
