--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                             <br>
                             <br> 
                             I am knowledgeable in a few languages specifically; Python, Java, HTML5, and CSS3. 📝.
-                            I have some experience with Selenium, Regular Expressions, Web Requests, Bootstrap3, 
-                            Bootstrap 4, Multi-Treading, as well as Asynchrony! 📖
+                            I have some experience with Selenium, Regular Expressions, Web Requests, Bootstrap3, and
+                            Bootstrap 4! 📖
                             <br>
                             <br> 
                             Currently learning: JavaScript, and MongoDB 📚
                             <br>
-                            GPA (4.33 System): 4.08
+                            GPA (4.33 System): 4.16
                             <br>
                             <br>    
                             Located: Toronto, ON, Canada 
@@ -348,7 +348,7 @@
 
     <!--Footer-->
     <footer id="footer" class="footer">
-        <span>© Rocky Kuang 2020</span>
+        <span>Copyright © 2020 Rocky Kuang. All Rights Reserved</span>
     </footer>
 
     <!--Preloader-->
