Html Details Updated

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!--Signature at the top Left-->
         <a id="mainNavbarBrand" href="#" class="navbar-brand">
             <img src="src/images/icon.png" width="30" height="30" class="align-middle" alt="pageIcon">
-            <span id="mainNavbarBrandName" style="padding-left: 7px;">Rocky Kuang</span>
+            <span id="mainNavbarBrandName" class="mainNavbarBrandName">Rocky Kuang</span>
         </a>
 
         <!--Collapse Nav When Dimensions Shrink-->
@@ -289,10 +289,10 @@
     </section>-->
 
     <!--Contact-->
-    <section id="contact" class="contact" style="height: auto;">
+    <section id="contact" class="contact">
         <div class="container d-flex justify-content-center align-items-center">
             
-            <div class="row" style="height: 100vh; width: 100%;">
+            <div class="row" style="height: 100vh;">
                 
                 <div class="d-none col-md-6 d-md-flex align-items-center" style="height: 100%;">
                     <img class="img-fluid contactImage" src="src/images/Banksy1.jpg">
