Updated About & Contact Images

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 
     <!--About Page-->
     <section id="about" class="about">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
 
                 <!--Left Side of About-->
-                <div class="col-lg-6 aboutContent">
+                <div class="col-md-6 aboutContent pr-xs-2 pr-md-0">
                     <div>
                         <h1 class="aboutTitle"><strong>About Me!</strong></h1>
                         <hr class="aboutHR">
@@ -146,7 +146,7 @@
                 </div>
 
                 <!--Right Side of About-->
-                <div class="col-lg-6 d-none d-lg-flex align-items-center" style="height: 100vh;">
+                <div class="d-none col-md-6 d-md-flex align-items-center" style="padding-right: 10%;">
                     <img class="img-fluid aboutImage" src="src/images/toronto.jpg">
                 </div>
             </div>
@@ -290,17 +290,17 @@
 
     <!--Contact-->
     <section id="contact" class="contact">
-        <div class="container d-flex justify-content-center align-items-center">
+        <div class="container-fluid d-flex justify-content-center">
             
             <div class="row" style="height: 100vh;">
                 
-                <div class="d-none col-md-6 d-md-flex align-items-center" style="height: 100%;">
+                <div class="d-none col-md-6 d-md-flex align-items-center" style="height: 100%; padding-left: 10%;">
                     <img class="img-fluid contactImage" src="src/images/Banksy1.jpg">
                 </div>
 
-                <div class="col-12 col-md-6 d-flex justify-content-center align-items-center py-3 py-md-0">
+                <div class="col-12 col-md-6 d-flex justify-content-center align-items-center py-3 py-md-0" style="padding-right: 10%;">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-8 col-md-10 d-lg-flex flex-column"style="text-align: start; width:600px margin-top:10%; text-align:middle;">
+                        <div class="col-8 col-md-10 d-lg-flex flex-column" style="text-align: start;">
                             <h1><strong>How May I Be Of Assistance?</strong></h1>
                             <hr align="left" style="width: 100%; border: 3px solid; color: rgb(180, 180, 180);">
                             <br>
