Update on responsiveness and design

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="container">
 
             <!--Portfolio Title-->
-            <hr style="margin-bottom: 10%;">
+            <hr style="margin-bottom:5%;">
             <h2 class="text-center"><strong>Portfolio</strong></h2>
             <hr style="margin-bottom:5%; width: 25%">
 
@@ -290,9 +290,9 @@
 
     <!--Contact-->
     <section id="contact" class="contact">
-        <div class="container-fluid d-flex justify-content-center">
+        <div class="container-fluid d-flex justify-content-center" style="height: 100%;">
             
-            <div class="row" style="height: 100vh;">
+            <div class="row" style="height: 100%;">
                 
                 <div class="d-none col-md-6 d-md-flex align-items-center" style="height: 100%; padding-left: 10%;">
                     <img class="img-fluid contactImage" src="src/images/Banksy1.jpg">
