--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="profile">
-                        <img class="profileImage" src="src/images/profile.JPG">
+                        <img class="profileImage" src="src/images/profile.JPG" alt="Rocky Kuang">
                         <div>
                             <h1><strong>Rocky Kuang</strong></h1>
                             <h3>Computer Science Student</h3>
