--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <!--Left Side Nav Bar-->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a id="linkedinLink" class="nav-link" href="https://www.linkedin.com/in/rocky-kuang/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin</a>
+                    <a id="linkedinLink" class="nav-link" href="https://www.linkedin.com/in/rocky-kuang/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true" alt="Rocky Kuang Linkedin"></i> Linkedin</a>
                 </li>
                 <li class="nav-item">
-                    <a id="githubLink" class="nav-link" href="https://github.com/RockyLogic" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i> GitHub</a>
+                    <a id="githubLink" class="nav-link" href="https://github.com/RockyLogic" target="_blank"><i class="fa fa-github-square" aria-hidden="true" alt="Rocky Kuang Github"></i> GitHub</a>
                 </li>
             </ul>
 
@@ -319,7 +319,7 @@
                             <div>
                                 <i class="fa fa-github-square fa-lg" aria-hidden="true "></i>
                                 <a href="https://github.com/RockyLogic " target="_blank" class="contactLinks">
-                                    GitHub<span class="d-none d-lg-inline contactLinkDetail"><strong> - RKuangDev</strong></span>
+                                    GitHub<span class="d-none d-lg-inline contactLinkDetail" alt="Rocky Kuang Github"><strong> - RKuangDev</strong></span>
                                 </a>
                             </div>
 
@@ -327,14 +327,14 @@
                             <div>
                                 <i class="fa fa-linkedin-square fa-lg" aria-hidden="true "></i>
                                 <a href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank" class="contactLinks">
-                                    Linkedin<span class="d-none d-lg-inline contactLinkDetail"><strong> - Rocky Kuang </strong></span>
+                                    Linkedin<span class="d-none d-lg-inline contactLinkDetail" alt="Rocky Kuang Linkedin"><strong> - Rocky Kuang </strong></span>
                                 </a>
                             </div>
 
                             <!--Resume-->
                             <div>
                                 <i class="fa fa-id-card fa-lg" aria-hidden="true "></i>
-                                <a href="https://drive.google.com/uc?export=download&id=1KzLqJUspkrv8fYpagIFi1Na-Kw29FJ9I" class="contactLinks">
+                                <a href="https://drive.google.com/uc?export=download&id=1KzLqJUspkrv8fYpagIFi1Na-Kw29FJ9I" class="contactLinks" alt="Rocky Kuang Resume">
                                     Resume<span class="d-none d-lg-inline contactLinkDetail"><strong>(Download)</strong></span>
                                 </a>
                             </div>
